@@ -6,6 +6,10 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-02-17
 
+  - Created a new plugin "check_closing" that automatically inserts a zero
+    balance check after postings which are known - and flagged, using metadata -
+    to be closing trades.
+
   - Fixed bug in "sellgains" plugin whereby a price of zero units failed an
     assertion. Added a test.
 
